<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.zxing.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/navbar"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/scan_qrcode"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal" 
            android:layout_marginBottom="75dp">
			<Button
            	android:id="@+id/btn_get_scan"
          	  	android:layout_width="fill_parent"
            	android:layout_height="38dp"
            	android:layout_centerInParent="true"
            	android:background="@drawable/btnby"
            	android:layout_marginRight="4dp"
        		android:layout_marginLeft="8dp"
            	android:layout_weight="1"
            	android:text="@string/scan_phone_qrcode"
            	android:textSize="16sp"
            	android:textStyle="bold" />
        	<Button
            	android:id="@+id/btn_cancel_scan"
            	android:layout_width="fill_parent"
            	android:layout_height="38dp"
            	android:layout_centerInParent="true"
            	android:background="@drawable/btnby"
            	android:layout_marginRight="8dp"
        		android:layout_marginLeft="4dp"
            	android:layout_weight="1"
            	android:text="@string/cancle"
            	android:textSize="16sp"
            	android:textStyle="bold" />
		</LinearLayout>
        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:text="@string/scan_prompt_info"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout> -->
        
    </RelativeLayout>

</FrameLayout>